[project]
name = "yarngpt-sdk"
version = "0.1.0"
description = "Unofficial community Python SDK for YarnGPT - Text-to-Speech API for Nigerian Accents"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Halleluyah Darasimi Oludele", email = "halleluyaholudele@gmail.com" }
]
license = { text = "MIT" }
keywords = ["yarngpt", "text-to-speech", "tts", "nigerian", "accents", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://yarngpt.ai"
Documentation = "https://github.com/hallelx2/yarngpt-sdk#readme"
Repository = "https://github.com/hallelx2/yarngpt-sdk"
Issues = "https://github.com/hallelx2/yarngpt-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yarngpt"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
