[project]
name = "yarngpt-sdk"
version = "0.2.0"
description = "Unofficial community Python SDK for YarnGPT - Text-to-Speech API for Nigerian Accents"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Halleluyah Darasimi Oludele", email = "halleluyaholudele@gmail.com" }
]
license = { text = "MIT" }
keywords = ["yarngpt", "text-to-speech", "tts", "nigerian", "accents", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "python-decouple>=3.8",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://yarngpt.ai"
Documentation = "https://github.com/hallelx2/yarngpt-sdk#readme"
Repository = "https://github.com/hallelx2/yarngpt-sdk"
Issues = "https://github.com/hallelx2/yarngpt-sdk/issues"
Changelog = "https://github.com/hallelx2/yarngpt-sdk/blob/master/CHANGELOG.md"

[project.scripts]
yarngpt = "yarngpt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yarngpt"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests as integration tests (require API key)",
    "unit: marks tests as unit tests (no API calls)",
]
env = [
    "YARNGPT_API_KEY=test_key_for_unit_tests"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-asyncio>=0.24.0",
]
